# game-development

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  requirements.md
.github/workflows/: ci.yml
assets/: hello.txt
assets/maps/: level_00.map
assets/pieces/: CREDITS.txt  bB.hrt  bK.hrt  bN.hrt  bP.hrt  bQ.hrt  bR.hrt  wB.hrt  wK.hrt  wN.hrt  wP.hrt  wQ.hrt  wR.hrt
assets/projects/: creator.gameproject
assets/sprites/: spin_8.hrt
assets/textures/: studio_00.hrt  studio_01.hrt  studio_02.hrt  wall_1.hrt  wall_2.hrt  wall_3.hrt
baas/: CMakeLists.txt  app_config.cc  app_config.h  app_setup.cc  app_setup.h  config.example.json  main.cc
baas/admin/: admin_controller.cc  admin_controller.h  admin_service.cc  admin_service.h  audit.cc  audit.h
baas/analytics/: analytics_controller.cc  analytics_controller.h  analytics_service.cc  analytics_service.h
baas/asset_registry/: asset_controller.cc  asset_controller.h  asset_service.cc  asset_service.h
baas/auth/: auth_controller.cc  auth_controller.h  auth_service.cc  auth_service.h  jwt.cc  jwt.h  password.cc  password.h
baas/cloud_save/: save_controller.cc  save_controller.h  save_service.cc  save_service.h
baas/common/: context_keys.h  errors.cc  errors.h
baas/db/: db.cc  db.h
baas/gateway/: admin_filters.cc  admin_filters.h  api_key_filter.cc  api_key_filter.h  auth_filter.cc  auth_filter.h  rate_limiter.cc  rate_limiter.h
baas/inventory/: inv_controller.cc  inv_controller.h  inv_service.cc  inv_service.h
baas/leaderboard/: lb_controller.cc  lb_controller.h  lb_service.cc  lb_service.h
baas/live_events/: events_controller.cc  events_controller.h  events_service.cc  events_service.h
baas/observability/: metrics.cc  metrics.h
baas/ops/: Dockerfile  backup_restore_drill.sh  deploy.md  docker-compose.yml
baas/rbac/: rbac.cc  rbac.h
baas/realtime/: hub.cc  hub.h  ws_controller.cc  ws_controller.h
baas/remote_config/: config_controller.cc  config_controller.h  config_service.cc  config_service.h
baas/replays/: replay_controller.cc  replay_controller.h  replay_service.cc  replay_service.h
baas/store/: store_controller.cc  store_controller.h  store_service.cc  store_service.h
baas/test_runner/: testrun_controller.cc  testrun_controller.h  testrun_service.cc  testrun_service.h
baas/web/: dashboard.html
cmake/: emscripten.toolchain.cmake
docs/book/: 00-overview.md  01-build-and-toolchain.md  02-platform-layer.md  03-game-loop-and-timestep.md  04-math-library.md  05-software-renderer-2d.md  06-input.md  07-assets.md  08-m0-demo-and-acceptance.md  09-chess-board-and-fen.md  10-chess-move-generation-and-perft.md  100-measuring-a-release.md  101-secret-rotation.md  102-idempotency-keys.md  103-atomic-purchase.md  104-request-correlation-ids.md  105-store-catalog.md  106-rbac-operators-and-roles.md  107-backend-container-and-build-split.md  11-chess-game-controller.md  12-chess-ai-search.md  13-chess-tui.md  14-chess-gui.md  15-chess-m1-acceptance.md  16-fps-raycasting.md  17-fps-sprites-depth-audio.md  18-3d-transform-pipeline.md  19-triangle-rasterization-and-zbuffer.md  20-geometry-and-meshes.md  21-cameras-orbit-and-free.md  22-shading-culling-clipping.md  23-m3-acceptance.md  24-mouse-picking-and-rays.md  25-viz3d-sandbox-acceptance.md  26-isometric-projection.md  27-tilemap-and-depth-sort.md  28-ecs-entities.md  29-astar-pathfinding.md  30-save-load-serialization.md  31-m4-iso-sim-acceptance.md  (+68 more)
docs/guides/: author-to-url.md  backup-restore-drill.md
docs/strategy/: 01-market-and-positioning.md  02-current-state-and-gap-analysis.md  03-target-platform-architecture.md  04-roadmap-2026-2029.md  05-product-metrics-and-stage-gates.md  06-competitive-watchlist.md  README.md
docs/superpowers/plans/: 2026-07-10-game-baas-slice1-auth-leaderboard.md  2026-07-11-2d-lighting.md  2026-07-11-audio-mixer.md  2026-07-11-baas-asset-registry.md  2026-07-11-baas-test-runner.md  2026-07-11-game-platform-strategy-docs.md  2026-07-11-horizon-0-sequence.md  2026-07-11-map-level-lab.md  2026-07-11-maplab-spawn.md  2026-07-11-mini-studio-texture-lab.md  2026-07-11-native-ui-ux-overhaul.md  2026-07-11-particle-system.md  2026-07-11-project-manifest-golden-path.md  2026-07-11-sandbox-animated-actors.md  2026-07-11-sandbox-editor.md  2026-07-11-sprite-animation.md  2026-07-11-studio-sheet-export.md  2026-07-11-textured-sprites.md  (+1 more)
scripts/: fetch_pieces.py  gen_spin_sheet.cpp
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/gbaas/: client.h  gbaas.h  json.hpp  realtime.h  result.h  transport.h  ws_transport.h
sdk/cpp/src/: client.cc  realtime.cc  transport_curl.cc  transport_emscripten.cc  ws_transport_curl.cc  ws_transport_emscripten.cc
server/: http.cpp  http.hpp  leaderboard.cpp  leaderboard.hpp  main.cpp  mime.hpp  net.cpp  net.hpp  static_files.cpp  static_files.hpp
src/: main.cpp
src/demo/: demo_scene.cpp  demo_scene.hpp
src/engine/: app.cpp  app.hpp  asset_cache.cpp  asset_cache.hpp  assets.cpp  assets.hpp  camera.cpp  camera.hpp  color.hpp  font8x8.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  iso.hpp  math.hpp  pick.hpp  pipeline.hpp  renderer2d.cpp  renderer2d.hpp  renderer3d.cpp  renderer3d.hpp  scene.hpp
src/platform/: backend_sdl.cpp  input.hpp  platform.hpp
tests/: baas_test_util.h  test_aa.cpp  test_assets.cpp  test_audio.cpp  test_baas_admin.cc  test_baas_analytics.cc  test_baas_assets.cc  test_baas_auth.cc  test_baas_catalog.cc  test_baas_cloudsave.cc  test_baas_config.cc  test_baas_events.cc  test_baas_idempotency.cc  test_baas_inventory.cc  test_baas_jwt.cc  test_baas_leaderboard.cc  test_baas_liveops.cc  test_baas_metrics.cc  test_baas_migrations.cc  test_baas_purchase.cc  test_baas_ratelimit.cc  test_baas_rbac.cc  test_baas_realtime.cc  test_baas_release_metrics.cc  test_baas_replays.cc  test_baas_secret_rotation.cc  test_baas_testruns.cc  test_baas_tracing.cc  test_chess.cpp  test_colony.cpp  test_ecs.cpp  test_flipbook.cpp  test_font.cpp  test_fps.cpp  test_hub.cpp  test_iso.cpp  test_jobs.cpp  test_light.cpp  test_maplab.cpp  test_math.cpp  (+23 more)
web/: shell.html
(+175 files in other folders)
